linux/kubernetes/epicgames-freegames-node/epicgames-freegames-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: epicgames-freegames-node
  name: epicgames-freegames-node
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: epicgames-freegames-node
status:
  loadBalancer: {}
