linux/kubernetes/epicgames-freegames-node/epicgames-freegames-node-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: epicgames-freegames-node
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/epicgames-freegames-node: "true"
  podSelector:
    matchLabels:
      io.kompose.network/epicgames-freegames-node: "true"
